--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>bouncing balls</h1>
+    <p>Ball count: <span id="ballCount">0</span></p>
     <canvas></canvas>
 
     <script src="js/main.js"></script>
